# appmetrica-sdk-android

./: .gitignore  .mapping.json  .piglet-meta.json  README.md  build.gradle.kts  dependencies_versions.yaml  gradle.properties  libs.versions.toml  public.settings.gradle.kts  settings.gradle.kts  update-version.sh
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml
ad-revenue/: README.MD  build.gradle.kts
ad-revenue-admob-v23/: README.MD  build.gradle.kts
ad-revenue-admob-v23/api/: release.api  releaseManifest.xml  releaseModule.json  releasePom.xml  releaseProguard.txt
ad-revenue-admob-v23/proguard/: consumer-rules.pro  proguard-rules.pro
ad-revenue-applovin-v12/: README.MD  build.gradle.kts
ad-revenue-applovin-v12-auto/: README.MD  build.gradle.kts
ad-revenue-applovin-v12-auto/api/: release.api  releaseManifest.xml  releaseModule.json  releasePom.xml  releaseProguard.txt
ad-revenue-applovin-v12-auto/proguard/: proguard-rules.pro
ad-revenue-applovin-v12/api/: release.api  releaseManifest.xml  releaseModule.json  releasePom.xml  releaseProguard.txt
ad-revenue-applovin-v12/proguard/: proguard-rules.pro
ad-revenue-fyber-v3/: README.MD  build.gradle.kts
ad-revenue-fyber-v3/api/: release.api  releaseDependencies.txt  releaseManifest.xml  releaseModule.json  releasePom.xml
ad-revenue-fyber-v3/proguard/: consumer-rules.pro  proguard-rules.pro
ad-revenue-ironsource-v7/: README.MD  build.gradle.kts
ad-revenue-ironsource-v7/api/: release.api  releaseManifest.xml  releaseModule.json  releasePom.xml
ad-revenue-ironsource-v7/proguard/: consumer-rules.pro  proguard-rules.pro
ad-revenue-ironsource-v9/: README.MD  build.gradle.kts
ad-revenue-ironsource-v9/api/: release.api  releaseManifest.xml  releaseModule.json  releasePom.xml
ad-revenue-ironsource-v9/proguard/: consumer-rules.pro  proguard-rules.pro
ad-revenue-other/: README.MD  build.gradle.kts  lint-baseline-mute.xml
ad-revenue-other/api/: release.api  releaseManifest.xml  releaseModule.json  releasePom.xml  releaseProguard.txt
ad-revenue-other/proguard/: proguard-rules.pro
ad-revenue/api/: release.api  releaseDependencies.txt  releaseManifest.xml  releaseModule.json  releasePom.xml
ad-revenue/proguard/: consumer-rules.pro  proguard-rules.pro
analytics/: README.MD  build.gradle.kts  lint-baseline-mute.xml  lint.xml
analytics/aidl/: README.md
analytics/api/: prodRelease.api  prodReleaseDependencies.txt  prodReleaseManifest.xml  prodReleaseModule.json  prodReleasePom.xml
analytics/proguard/: consumer-rules.pro  proguard-rules.pro
apphud/: README.MD  build.gradle.kts  lint-baseline-mute.xml
apphud-v2/: README.MD  build.gradle.kts
apphud-v2/api/: release.api  releaseDependencies.txt  releaseManifest.xml  releaseModule.json  releasePom.xml
apphud-v2/proguard/: consumer-rules.pro  proguard-rules.pro
apphud-v3/: README.MD  build.gradle.kts
apphud-v3/api/: release.api  releaseDependencies.txt  releaseManifest.xml  releaseModule.json  releasePom.xml
apphud-v3/proguard/: consumer-rules.pro  proguard-rules.pro
apphud/api/: release.api  releaseDependencies.txt  releaseManifest.xml  releaseModule.json  releasePom.xml
apphud/proguard/: consumer-rules.pro  proguard-rules.pro
appsetid/: README.MD  build.gradle.kts  lint-baseline-mute.xml
appsetid/api/: release.api  releaseDependencies.txt  releaseManifest.xml  releaseModule.json  releasePom.xml  (+1 more)
billing/: README.MD  build.gradle.kts  lint-baseline-mute.xml
billing-interface/: README.MD  build.gradle.kts  lint-baseline-mute.xml
billing-v3/: README.MD  build.gradle.kts
billing-v4/: README.MD  build.gradle.kts
billing-v6/: README.MD  build.gradle.kts  lint-baseline-mute.xml
billing-v8/: README.MD  build.gradle.kts  lint-baseline-mute.xml
build-logic/: README.MD  build.gradle.kts  settings.gradle.kts
codequality/: checkstyle-imports.xml  checkstyle-suppressions.xml  checkstyle.xml  detekt.yml  lint.xml  pmd.xml
common-logger/: README.MD  build.gradle.kts  lint-baseline-mute.xml
common_assertions/: build.gradle.kts  settings.gradle.kts
core-api/: README.MD  build.gradle.kts  lint-baseline-mute.xml
core-utils/: README.MD  build.gradle.kts  lint-baseline-mute.xml
gpllibrary/: README.MD  build.gradle.kts  lint-baseline-mute.xml
id-sync/: README.MD  build.gradle.kts  lint-baseline-mute.xml
identifiers/: README.MD  build.gradle.kts  lint-baseline-mute.xml
location/: README.MD  build.gradle.kts  lint-baseline-mute.xml
location-api/: README.MD  build.gradle.kts
logger/: README.MD  build.gradle.kts
modules-api/: README.MD  build.gradle.kts
ndkcrashes/: .gitignore  README.md  build.gradle.kts  lint-baseline-mute.xml
ndkcrashes-api/: README.MD  build.gradle.kts
ndkcrashes/src/main/cpp/: AppProcessConfig.cpp  AppProcessConfig.h  AppmetricaCrashpadConfig.cpp  AppmetricaCrashpadConfig.h  CMakeLists.txt  HandlerRunnerJni.cpp  JniUtil.cpp  JniUtil.h  NativeCrashReader.cpp  NativeCrashReader.h  NativeCrashReaderJni.cpp  NativeUncaughtExceptionHandler.cpp
ndkcrashes/src/main/cpp/core/: AppMetricaCrashpadConfig.cpp  AppMetricaCrashpadConfig.h  NativeCrashCoreJni.cpp  NativeCrashUtilsJni.cpp
ndkcrashes/src/main/cpp/runner/: NativeCrashHandlerRunnerJni.cpp
ndkcrashes/src/main/cpp/service/: CrashpadCrash.cpp  CrashpadCrash.h  NativeCrashDatabase.cpp  NativeCrashDatabase.h  NativeCrashServiceJni.cpp
ndkcrashes/src/main/cpp/utils/: ArrayList.cpp  ArrayList.h  JNIUtils.cpp  JNIUtils.h  log.h
network/: README.MD  build.gradle.kts  lint-baseline-mute.xml
network-api/: README.MD  build.gradle.kts
network-legacy/: README.MD  build.gradle.kts
network-okhttp/: README.MD  build.gradle.kts
network-tasks/: README.MD  build.gradle.kts  lint-baseline-mute.xml
product-flow/: README.MD  build.gradle.kts
proguard/: proguard-root-project.txt
proto/: LICENSE  README.MD  build.gradle.kts
remote-permissions/: README.MD  build.gradle.kts  lint-baseline-mute.xml
reporter-extension/: README.MD  build.gradle.kts
screenshot/: README.MD  build.gradle.kts  lint-baseline-mute.xml
test-utils/: build.gradle.kts
(+4318 files in other folders)
